force-app/main/default/objects/Lead/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <label>Type of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Animal Care</fullName>
            </value>
            <value>
                <fullName>Auto Repair</fullName>
            </value>
            <value>
                <fullName>Beauty Services</fullName>
            </value>
            <value>
                <fullName>Business Consulting</fullName>
            </value>
            <value>
                <fullName>Cleaning Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Educational Services</fullName>
            </value>
            <value>
                <fullName>Entertainment Services</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Food Industry</fullName>
            </value>
            <value>
                <fullName>Freight Services</fullName>
            </value>
            <value>
                <fullName>Funeral Services</fullName>
            </value>
            <value>
                <fullName>Health Care Services</fullName>
            </value>
            <value>
                <fullName>Home Health Care</fullName>
            </value>
            <value>
                <fullName>Hospitality Services</fullName>
            </value>
            <value>
                <fullName>Insurance Agency</fullName>
            </value>
            <value>
                <fullName>Interior Design</fullName>
            </value>
            <value>
                <fullName>Landscaping Services</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Maintenance Services</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Marketing Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Real Estate Agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>