force-app/main/default/objects/Lead/fields/Updated_date_ref__c.field-meta.xml
<CustomField>
    <fullName>Updated_date_ref__c</fullName>
    <label>Updated date(ref)</label>
    <type>DateTime</type>
</CustomField>