force-app/main/default/objects/Lead/fields/utm_term__c.field-meta.xml
<CustomField>
    <fullName>utm_term__c</fullName>
    <label>utm term</label>
    <length>200</length>
    <type>Text</type>
</CustomField>