force-app/main/default/objects/Lead/fields/Voso_AI__c.field-meta.xml
<CustomField>
    <fullName>Voso_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voso AI?</label>
    <type>Checkbox</type>
</CustomField>