force-app/main/default/objects/Lead/fields/Weekly_Savings_So_Far_c__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Savings_So_Far_c__c</fullName>
    <formula>IF(
  AND(
    NOT(ISBLANK(Estimated_Current_Payment__c)),
    NOT(ISBLANK(Quiz_Quote__c))
  ),
  (Estimated_Current_Payment__c - Quiz_Quote__c) * FLOOR((TODAY() - DATEVALUE(CreatedDate)) / 7),
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Savings So Far</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>