force-app/main/default/objects/Lead/fields/X1500_per_week__c.field-meta.xml
<CustomField>
    <fullName>X1500_per_week__c</fullName>
    <label>&gt;1500 per week</label>
    <length>200</length>
    <type>Text</type>
</CustomField>