force-app/main/default/objects/Lead/fields/ZAP_RR_Cherry_QRMCA__c.field-meta.xml
<CustomField>
    <fullName>ZAP_RR_Cherry_QRMCA__c</fullName>
    <label>ZAP RR Cherry QRMCA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>