force-app/main/default/objects/Lead/fields/ZAP_RR_Main_EDD_Cherry__c.field-meta.xml
<CustomField>
    <fullName>ZAP_RR_Main_EDD_Cherry__c</fullName>
    <label>ZAP RR Main EDD Cherry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>