force-app/main/default/objects/Lead/validationRules/Desired_Weekly_Payment_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Desired_Weekly_Payment_Mandatory</fullName>
    <active>false</active>
    <description>Desired Weekly Payment field should be mandatory for conversion</description>
    <errorConditionFormula>ISBLANK(Desired_Weekly_Payment__c) &amp;&amp; IsConverted</errorConditionFormula>
    <errorDisplayField>Desired_Weekly_Payment__c</errorDisplayField>
    <errorMessage>Please provide the desired weekly payment before converting the lead.</errorMessage>
</ValidationRule>