force-app/main/default/objects/Lead/validationRules/DNC_Donot_create_lead_withAsher_Bronstin.validationRule-meta.xml
<ValidationRule>
    <fullName>DNC_Donot_create_lead_withAsher_Bronstin</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  LOWER(Company) = &quot;solar one service pros llc&quot;,
  CONTAINS(LOWER(FirstName) &amp; &quot; &quot; &amp; LOWER(LastName), &quot;asher bronstin&quot;),
  LOWER(Email) = &quot;accounting@controlonesolar.com&quot;
)</errorConditionFormula>
    <errorMessage>This lead cannot be created in Salesforce. It&apos;s in DNC</errorMessage>
</ValidationRule>