force-app/main/default/objects/Lead/validationRules/does_not_move_to_Qualified_Pre_deal.validationRule-meta.xml
<ValidationRule>
    <fullName>does_not_move_to_Qualified_Pre_deal</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Pre_Deal_Status__c, &quot;NEW LEAD&quot;) ||
    ISPICKVAL(Pre_Deal_Status__c, &quot;ATTEMPTING&quot;) ||
    ISPICKVAL(Pre_Deal_Status__c, &quot;APPOINTMENT SET&quot;) ||
    ISPICKVAL(Pre_Deal_Status__c, &quot;FOLLOW UP&quot;) ||
    ISPICKVAL(Pre_Deal_Status__c, &quot;Reduced pays with Creditor&quot;) ||
    ISPICKVAL(Pre_Deal_Status__c, &quot;FUTURE FOLLOW UP&quot;),
    ISPICKVAL(Status, &quot;Qualified&quot;)
)</errorConditionFormula>
    <errorDisplayField>Pre_Deal_Status__c</errorDisplayField>
    <errorMessage>You cannot move this lead to &apos;Qualified&apos; while it is in its current Pre-Deal Status.</errorMessage>
</ValidationRule>