force-app/main/default/objects/Lead/validationRules/Lead_Source_EDD_Is_Mandatory_Convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_EDD_Is_Mandatory_Convert</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Sales_Office__c = &quot;Everyday Debt&quot;,
  ISBLANK(TEXT(Lead_Source_EDD__c)),
  IsConverted
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_EDD__c</errorDisplayField>
    <errorMessage>Lead Source EDD is required for EDD leads before conversion.</errorMessage>
</ValidationRule>