force-app/main/default/objects/Lead/validationRules/Lead_Source_QRMCA_Is_Mandatory_Convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_QRMCA_Is_Mandatory_Convert</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  Sales_Office__c = &quot;Next Day Settlement&quot;,
  ISPICKVAL(Lead_Source_Debtifi__c, &quot;&quot;),  
  IsConverted
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Debtifi__c</errorDisplayField>
    <errorMessage>Lead Source NXDS is required for  leads Next Day Settlement before conversion.</errorMessage>
</ValidationRule>