force-app/main/default/objects/Lead/validationRules/Prevent_Conversion_When_Waiting_On_Docs.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Conversion_When_Waiting_On_Docs</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    Sales_Office__c = &apos;Everyday Debt&apos;,
    TEXT(Pre_Deal_Status__c) = &apos;WAITING ON DOCS&apos;,
    ISCHANGED(IsConverted)
)</errorConditionFormula>
    <errorDisplayField>Pre_Deal_Status__c</errorDisplayField>
    <errorMessage>Leads with Sales Office &apos;Everyday Debt&apos; and Pre-Deal Status &apos;WAITING ON DOCS&apos; cannot be converted.</errorMessage>
</ValidationRule>