force-app/main/default/objects/Lead/validationRules/Prevent_Non_Admins_From_Editing_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Non_Admins_From_Editing_Source</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Source__c), 
    NOT(OR(
        $Profile.Name = &quot;System Administrator&quot;, 
        $Profile.Name = &quot;UW&quot;
    ))
)</errorConditionFormula>
    <errorMessage>&quot;Only System Administrators can edit the Source field.&quot;</errorMessage>
</ValidationRule>