force-app/main/default/objects/Lead/validationRules/Require_EIN_On_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_EIN_On_Conversion</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(EIN__c) &amp;&amp; IsConverted</errorConditionFormula>
    <errorDisplayField>EIN__c</errorDisplayField>
    <errorMessage>Please update the EIN before converting the Lead.</errorMessage>
</ValidationRule>