force-app/main/default/objects/Lead/validationRules/Require_Email_On_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_On_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email) &amp;&amp; IsConverted</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email is required before converting the Lead.</errorMessage>
</ValidationRule>