force-app/main/default/objects/Lead/validationRules/Require_Est_Total_Debt_On_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Est_Total_Debt_On_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Est_Total_Debt__c) &amp;&amp; IsConverted</errorConditionFormula>
    <errorDisplayField>Est_Total_Debt__c</errorDisplayField>
    <errorMessage>Error: Please update the &apos;Est. Total Debt&apos; field before converting the Lead.</errorMessage>
</ValidationRule>