force-app/main/default/objects/Lead/validationRules/Require_Phone_On_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Phone_On_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Phone) &amp;&amp; IsConverted</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone is required before converting the Lead.</errorMessage>
</ValidationRule>