force-app/main/default/objects/Lead/validationRules/Require_Underwriter_When_Converted.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Underwriter_When_Converted</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    IsConverted, 
    ISBLANK(Underwriter__c)
)</errorConditionFormula>
    <errorMessage>Underwriter must be filled before converting the Lead.</errorMessage>
</ValidationRule>