force-app/main/default/objects/Lead/validationRules/Restrict_Phone_Edit_For_SREDD.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Phone_Edit_For_SREDD</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Phone),
    $User.UserRoleId = &quot;00E5g000001XYZ&quot;
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Users with the Sales Rep Everyday Debt role are not allowed to edit the Phone field.</errorMessage>
</ValidationRule>