force-app/main/default/objects/Lead/listViews/All_Debt_Crusaders.listView-meta.xml
<ListView>
    <fullName>All_Debt_Crusaders</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Main_Source__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Est_Total_Debt__c</columns>
    <columns>Est_weekly_payment__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Pre_Deal_Status__c</columns>
    <columns>Pre_Deal_Statuses_DC__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>QuickNotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Office__c</field>
        <operation>equals</operation>
        <value>Debt Crusaders</value>
    </filters>
    <filters>
        <field>Pre_Deal_Statuses_DC__c</field>
        <operation>notEqual</operation>
        <value>DNC</value>
    </filters>
    <filters>
        <field>Pre_Deal_Statuses_DC__c</field>
        <operation>notEqual</operation>
        <value>Duplicate</value>
    </filters>
    <filters>
        <field>Pre_Deal_Statuses_DC__c</field>
        <operation>notEqual</operation>
        <value>Bad Lead - disconnected number,Bad Lead - wrong number,Bad Lead - not business owner,Bad Lead - spam/fake info</value>
    </filters>
    <filters>
        <field>Pre_Deal_Statuses_DC__c</field>
        <operation>notEqual</operation>
        <value>Not Interested - seeking funding,Not Interested - has mca debt,Not Interested - already in debt program,Not Interested - reduced with lenders directly</value>
    </filters>
    <filters>
        <field>Pre_Deal_Statuses_DC__c</field>
        <operation>notEqual</operation>
        <value>Not Interested - already in debt program (settled),Not Interested - already in debt program (not settled),Not Interested - no hardship,Not Interested - other,Not Qualified - no debt</value>
    </filters>
    <filters>
        <field>Pre_Deal_Statuses_DC__c</field>
        <operation>notEqual</operation>
        <value>Not Qualified - little/no revenue,Not Qualified - has business debt (not mca),Not Qualified - total debt less than minimum,Not Qualified - total payments less than minimum,Not Qualified - other</value>
    </filters>
    <filters>
        <field>Pre_Deal_Status__c</field>
        <operation>notEqual</operation>
        <value>NOT INTERESTED,INVALID,DNC,Not Qualified,Invalid lead</value>
    </filters>
    <label>All Debt Crusaders Leads 🅳 🅲</label>
    <sharedTo>
        <group>DCG_Lee</group>
        <group>Debt_Crusaders_Group</group>
    </sharedTo>
</ListView>