force-app/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Main_Source__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Est_Total_Debt__c</columns>
    <columns>Est_weekly_payment__c</columns>
    <columns>Sales_Office__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Pre_Deal_Status__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>QuickNotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Office__c</field>
        <operation>notEqual</operation>
        <value>Debt Consultants Group</value>
    </filters>
    <label>All Open Leads (Global)</label>
    <sharedTo>
        <group>ALL_except_DC_reps</group>
        <group>DCG_Lee</group>
    </sharedTo>
</ListView>