force-app/main/default/objects/Lead/listViews/Answer_Force_Leads.listView-meta.xml
<ListView>
    <fullName>Answer_Force_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>AnswerForce</value>
    </filters>
    <label>Answer Force Leads</label>
    <queue>QRMCA</queue>
</ListView>