force-app/main/default/objects/Lead/listViews/ANTHONY_Cold_Leads.listView-meta.xml
<ListView>
    <fullName>ANTHONY_Cold_Leads</fullName>
    <booleanFilter>1 AND (2 or 3)</booleanFilter>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Main_Source__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Balance__c</columns>
    <columns>Est_Total_Debt__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Fronter__c</columns>
    <columns>Pre_Deal_Status__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>QuickNotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pre_Deal_Status__c</field>
        <operation>equals</operation>
        <value>NEW LEAD,ATTEMPTING</value>
    </filters>
    <filters>
        <field>Fronter__c</field>
        <operation>equals</operation>
        <value>Anthony Hunter</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Anthony</value>
    </filters>
    <label>ANTHONY - Cold Leads</label>
    <sharedTo>
        <group>Greg_and_Anthony</group>
    </sharedTo>
</ListView>