force-app/main/default/objects/Lead/listViews/ANTHONY_NEW_Cherry_Blast_que.listView-meta.xml
<ListView>
    <fullName>ANTHONY_NEW_Cherry_Blast_que</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Main_Source__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>Est_Total_Debt__c</columns>
    <columns>Est_weekly_payment__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Fronter__c</columns>
    <columns>Pre_Deal_Status__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>QuickNotes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pre_Deal_Status__c</field>
        <operation>equals</operation>
        <value>NEW LEAD,ATTEMPTING</value>
    </filters>
    <filters>
        <field>Lead_Source_EDD__c</field>
        <operation>contains</operation>
        <value>Cherry,Cherry DC,EDD30</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>11/1/2025 12:00 AM</value>
    </filters>
    <label>ANTHONY - NEW Cherry Blast que</label>
    <sharedTo>
        <group>Greg_and_Anthony</group>
    </sharedTo>
</ListView>